--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "w2025-assign1",
   "version": "1.0.0",
   "description": "**Please view `COMP4513 Assignment 1.pdf` for instructions**",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
